# VR4R_G11_project

./: README.md  rviz_cnfg.rviz
Prova/Assets/Resources/: ROSConnectionPrefab.prefab
Prova/Assets/Scenes/: SampleScene.unity
Prova/Assets/ScifiOfficeLite/Meshes/Materials/Chair set/: Chair set T2.mat
Prova/Assets/ScifiOfficeLite/Meshes/Materials/Ground Mats/Carpet/: Carpet 2.mat
Prova/Assets/ScifiOfficeLite/Meshes/Materials/Ground Mats/Concrete/: Concrete Ground 20m.mat
Prova/Assets/ScifiOfficeLite/Meshes/Materials/Ground Mats/Epoxy/: Epoxy Ground 20m.mat
Prova/Assets/ScifiOfficeLite/Meshes/Materials/Interactables and Doors/Server, Control, Security panel/: Control Panel.mat  Glass.mat  Mechanical arms.mat
Prova/Assets/ScifiOfficeLite/Meshes/Materials/Table Texture Set/: Crates.mat  Table Texture Set 1 V2.mat  Table Texture Set 1.mat  Table Texture Set 3.mat  Table set Glass.mat  Vase.mat  tray.mat
Prova/Assets/ScifiOfficeLite/Meshes/Materials/Techware/: Keyboard props.mat  Techware.mat
Prova/Assets/ScifiOfficeLite/Meshes/Materials/Walls/: Wall Set 2 Glass.mat
Prova/Assets/ScifiOfficeLite/Scene/: Demo.unity
Prova/Assets/mogi_bot/Scripts/: RobotController.cs
Prova/Assets/mogi_bot/urdf/: mogi_bot.urdf
Prova/Assets/mogi_bot/urdf/Materials/: Default.mat
ros2_jj_ws/: .gitignore  frames_2026-02-23_22.03.23.gv  frames_2026-02-24_22.34.05.gv  frames_2026-03-02_10.47.26.gv  unity_sim_env_map.pgm  unity_sim_env_map.yaml
ros2_jj_ws/src/: frontier_explorer.py  mapper_params_online_async.yaml
ros2_jj_ws/src/vr_package/: CMakeLists.txt  package.xml
ros2_jj_ws/src/vr_package/config/: amcl_localization.yaml  navigation.yaml  waypoints.yaml
ros2_jj_ws/src/vr_package/launch/: assignment.launch.py  distributed_actions.launch.py  localization.launch.py  navigation.launch.py  rviz2.launch.py  spawn_robot_aruco.launch.py  vr_project.launch.py
ros2_jj_ws/src/vr_package/maps/: map_of_world.pgm  map_of_world.yaml
ros2_jj_ws/src/vr_package/msg/: MarkerDetection.msg
ros2_jj_ws/src/vr_package/rviz/: rviz.rviz  rviz_cnfg.rviz
ros2_jj_ws/src/vr_package/scripts/: candidate_paths.py  pathFollower.py
ros2_jj_ws/src/vr_package/urdf/: mogi_bot.urdf
unitySimEnv/: .gitignore
unitySimEnv/Assets/: msgbrowser_settings.asset
unitySimEnv/Assets/Scenes/: RoboticsSimulationSceneVRG11.unity
unitySimEnv/Assets/ScifiOfficeLite/Meshes/Materials/Chair set/: Chair set.mat
unitySimEnv/Assets/ScifiOfficeLite/Meshes/Materials/Ground Mats/Carpet/: Door Mat.mat
unitySimEnv/Assets/ScifiOfficeLite/Meshes/Materials/Interactables and Doors/Doors/: Grey Door.mat
unitySimEnv/Assets/ScifiOfficeLite/Meshes/Materials/Lights/: White Light.mat
unitySimEnv/Assets/ScifiOfficeLite/Meshes/Materials/Table Texture Set/: Shelf.mat  Table Texture Set 2.mat  Table Texture Set 4.mat  Table Texture Set 5.mat
unitySimEnv/Assets/ScifiOfficeLite/Meshes/Materials/Walls/: Wall Set 1 T1.mat  Wall Set 2.mat
unitySimEnv/Assets/ScifiOfficeLite/Prefabs/: Sphere.prefab
unitySimEnv/Assets/ScifiOfficeLite/Scene/: Demo.unity
unitySimEnv/Assets/ScifiOfficeLite/Scripts/: Alertborderhud.cs  Candidatepathvisualizer.cs  Compasshud.cs  Lidarvisualizer.cs  Minimaphud.cs  Navigationstatushud.cs  Patheditor.cs  Pathexecutor.cs  Pathselector.cs  Robottrailrenderer.cs  Robotvelocityhud.cs  Rosconnectionmonitor.cs  Selectionhud.cs  TrajectoryEditor.cs  Vrgoalsetter.cs
unitySimEnv/Assets/TextMesh Pro/Resources/Fonts & Materials/: LiberationSans SDF - Fallback.asset  LiberationSans SDF.asset
unitySimEnv/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
unitySimEnv/Assets/XR/Settings/: OpenXR Package Settings.asset
unitySimEnv/Assets/mogi_bot/Materials/: black-material.mat  white_001-material.mat
unitySimEnv/Assets/mogi_bot/Scripts/: CameraFollow.cs  LidarSensor.cs  OdometryTopicPublisher.cs  Robotcontrollerrigidbody.cs  TFPublisher.cs
unitySimEnv/Assets/mogi_bot/urdf/: mogi_bot.gazebo
unitySimEnv/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
